--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -10,4 +10,5 @@ mytodo = { path = "../" }
 diesel = { version = "1.4.8", features = ["sqlite"] }
 rocket = "0.4.2"
 rocket_contrib = { version = "0.4.10", features = ["json"], default-features = false }
+rocket_cors = { version = "0.5.0", default-features = false }
 serde = { version = "1.0.133", features = ["derive"] }
