--- a/frontend/Makefile.toml
+++ b/frontend/Makefile.toml
@@ -3,5 +3,12 @@ dependencies = ["create_wasm"]
 
 [tasks.create_wasm]
 command = "wasm-pack"
+install_crate = { crate_name = "wasm-pack", binary = "wasm-pack", test_arg = "-V" }
 args = ["build", "--target", "web", "--out-name", "package", "--dev"]
+dependencies = ["build"]
+
+[tasks.serve]
+description = "Start server"
+install_crate = { crate_name = "microserver", binary = "microserver", test_arg = "-h" }
+command = "microserver"
 dependencies = ["build"]
